# 20th_intern_songsoomin

./: LICENSE  README.md
C++&Qt/C++&Qt_day1/hw1/: CMakeLists.txt
C++&Qt/C++&Qt_day1/hw1/src/: main.cpp
C++&Qt/C++&Qt_day1/hw2/include/: hw2.hpp
C++&Qt/C++&Qt_day1/hw2/src/: hw2.cpp
C++&Qt/C++&Qt_day1/hw3/: CMakeLists.txt
C++&Qt/C++&Qt_day1/hw3/hw3/src/: hw3.cpp
C++&Qt/C++&Qt_day1/hw3/include/: hw3.hpp
C++&Qt/C++&Qt_day1/hw3/src/: main.cpp
C++&Qt/Qt_project/project_package/: CMakeLists.txt
C++&Qt/day1/hw2/: CMakeLists.txt
C++&Qt/day1/hw2/src/: main.cpp
C++&Qt/day2/hw1/: CMakeLists.txt
C++&Qt/day2/hw1/hw1_package/src/: mainwindow.cpp
C++&Qt/day2/hw1/include/: mainwindow.h
C++&Qt/day2/hw2/: CMakeLists.txt
C++&Qt/day2/hw2/hw2_package/ui/: mainwindow.ui
C++&Qt/day2/hw2/include/: mainwindow.h
C++&Qt/day2/hw2/src/: main.cpp  mainwindow.cpp
C++&Qt/day3/hw1/: hw1.mp4.webm
C++&Qt/day3/hw1/hw1_package/: CMakeLists.txt
C++&Qt/day3/hw1/hw1_package/include/: mainwindow.h
C++&Qt/day3/hw1/hw1_package/src/: main.cpp  mainwindow.cpp
C++&Qt/day3/hw1/hw1_package/ui/: mainwindow.ui
C++&Qt/day3/hw3/: hw3.mp4.webm
C++&Qt/day3/hw3/hw3_package/: CMakeLists.txt
C++&Qt/day3/hw3/hw3_package/include/: mainwindow.h
C++&Qt/day3/hw3/hw3_package/src/: main.cpp  mainwindow.cpp
C++&Qt/day3/hw3/hw3_package/ui/: mainwindow.ui
C++&Qt/day4/hw1/hw1_package/: CMakeLists.txt
C++&Qt/day4/hw1/hw1_package/include/: mainwindow.h
C++&Qt/day4/hw1/hw1_package/src/: mainwindow.cpp
C++&Qt/day4/hw1/hw1_package/ui/: mainwindow.ui
OpenCV/day1/hw1/hw1_pkg/: CMakeLists.txt  package.xml
OpenCV/day1/hw1/hw1_pkg/include/hw1_pkg/: hw1.hpp
OpenCV/day1/hw1/hw1_pkg/src/: hw1.cpp
OpenCV/day1/hw2/hw2_pkg/: CMakeLists.txt
OpenCV/day1/hw2/hw2_pkg/include/hw2_pkg/: main_window.hpp
OpenCV/day1/hw2/hw2_pkg/src/: main.cpp  main_window.cpp
OpenCV/day1/hw2/hw2_pkg/ui/: mainwindow.ui
OpenCV/day2/hw1/: hw1.webm
OpenCV/day2/hw1/hw1_pkg/: CMakeLists.txt  package.xml
OpenCV/day2/hw1/hw1_pkg/include/hw1_pkg/: main_window.hpp  qnode.hpp
OpenCV/day2/hw1/hw1_pkg/src/: main.cpp  main_window.cpp  qnode.cpp
OpenCV/day2/hw1/hw1_pkg/ui/: mainwindow.ui
ROS/day1/hw1/: hw1_code.txt.txt
ROS/day1/hw2/hw2_pkg/hw2_py_pkg/: setup.cfg
ROS/day1/hw2/hw2_pkg/hw2_py_pkg/hw2_py_pkg/: myrclpy1.py  myrclpy2.py
ROS/day1/hw2/hw2_pkg/hw_cpp_pkg/: CMakeLists.txt
ROS/day1/hw2/hw2_pkg/hw_cpp_pkg/include/hw2_pkg/: my_cpp_node.hpp
ROS/day1/hw2/hw2_pkg/hw_cpp_pkg/src/: my_cpp_node1.cpp  my_cpp_node2.cpp
ROS/day1/hw3/hw3_pkg/: CMakeLists.txt  package.xml
ROS/day1/hw3/hw3_pkg/src/: my_cpp_node.cpp
ROS/day2/hw1/: hw1.webm
ROS/day2/hw1/cmd/cmd_nodes/src/: main.cpp
ROS/day2/hw1/custom_interfaces/: CMakeLists.txt
ROS/day2/hw2/hw2_pkg/: package.xml
ROS/day2/hw2/hw2_pkg/include/hw2_pkg/: qnode.hpp
ROS/day2/hw2/hw2_pkg/src/: main.cpp  main_window.cpp  qnode.cpp
ROS/day2/hw2/hw2_pkg/ui/: MainWindow.ui
ROS/day2/hw3/hw3_pkg/: CMakeLists.txt  package.xml
ROS/day2/hw3/hw3_pkg/include/hw3_pkg/: qnode.hpp
ROS/day2/hw3/hw3_pkg/src/: main_window.cpp
ROS/day2/hw4/arm/arm_pkg/: CMakeLists.txt
ROS/day2/hw4/arm/arm_pkg/include/arm_pkg/: mainwindow.h
ROS/day2/hw4/arm/arm_pkg/ui/: mainwindow.ui
ROS/day2/hw4/publisher/publisher_pkg/: CMakeLists.txt  package.xml
ROS/day2/hw4/publisher/publisher_pkg/include/publisher_pkg/: mainwindow.h
ROS/day2/hw4/publisher/publisher_pkg/ui/: mainwindow.ui
ROS/day4/hw1/hw1_pkg/include/hw1_pkg/: pub_node.hpp
ROS/day4/hw1/hw1_pkg/src/: pub_node.cpp  sub_node.cpp
ROS/day4/hw2/: hw2.webm
ROS/day4/hw2/hw2_1_pkg/: CMakeLists.txt
ROS/day4/hw2/hw2_2_pkg/: CMakeLists.txt
ROS/day4/hw2/hw2_2_pkg/include/hw2_2_pkg/: odom_broadcaster.hpp
ROS/day4/hw2/hw2_2_pkg/src/: odom_broadcaster.cpp
documents/day1/hw2/hw2_pkg/hw_cpp_pkg/: package.xml
documents/day1/hw2_pkg/: CMakeLists.txt  package.xml
documents/day1/hw2_pkg/src/: my_cpp_node.cpp
hw1/include/: hw1.hpp
ros/day1/hw1/src/: hw1.cpp
ros/day1/hw2/hw2_pkg/hw2_py_pkg/: package.xml  setup.py
ros/day1/hw3/hw3_pkg/include/hw3_pkg/: my_cpp_node.hpp
ros/day2/hw1/cmd/cmd_nodes/: CMakeLists.txt  package.xml
ros/day2/hw1/cmd/cmd_nodes/include/custom_interfaces/: mainwindow.h
ros/day2/hw1/cmd/cmd_nodes/src/: mainwindow.cpp
ros/day2/hw1/custom_interfaces/: package.xml
ros/day2/hw2/: hw2.webm
ros/day2/hw2/hw2_pkg/: CMakeLists.txt
ros/day2/hw2/hw2_pkg/include/hw2_pkg/: main_window.hpp
ros/day2/hw2/hw2_pkg/src/: main_window.cpp
ros/day2/hw3/: hw3.mp4.webm
ros/day2/hw3/hw3_pkg/include/hw3_pkg/: main_window.hpp
ros/day2/hw3/hw3_pkg/src/: main.cpp  qnode.cpp
ros/day2/hw3/hw3_pkg/ui/: MainWindow.ui
ros/day2/hw4/: hw4.webm
ros/day2/hw4/arm/arm_pkg/: package.xml
ros/day2/hw4/arm/arm_pkg/src/: main.cpp  mainwindow.cpp
ros/day2/hw4/publisher/publisher_pkg/src/: main.cpp  mainwindow.cpp
ros/day4/hw1/: hw1.webm
ros/day4/hw1/hw1_pkg/: CMakeLists.txt  package.xml
ros/day4/hw1/hw1_pkg/include/hw1_pkg/: sub_node.hpp
ros/day4/hw2/hw2_1_pkg/: package.xml
ros/day4/hw2/hw2_1_pkg/include/hw2_1_pkg/: hw2_1.hpp
ros/day4/hw2/hw2_1_pkg/launch/: ds4_teleop_launch.py
ros/day4/hw2/hw2_1_pkg/src/: hw2_1.cpp
ros/day4/hw2/hw2_2_pkg/: package.xml
ros/day4/hw2/hw2_2_pkg/launch/: odom_broadcaster_launch.py
