<?xml version="1.0"?>
<package format="3">
  <name>publisher_pkg</name>
  <version>0.0.1</version>
  <description>Publisher GUI for sending robot arm angles via ROS2</description>
  <maintainer email="ssm@todo.todo">ssm</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

