<?xml version="1.0"?>
<package format="3">
  <name>cmd_nodes</name>
  <version>0.0.0</version>
  <description>Publisher and Subscriber node using custom_interfaces</description>
  <maintainer email="ssm@todo.todo">ssm</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>custom_interfaces</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>custom_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

