<?xml version="1.0"?>
<package format="3">
  <name>arm_pkg</name>
  <version>0.0.1</version>
  <description>Robot arm GUI subscriber package. Receives arm angles from 'arm_angles' topic and updates GUI in real-time.</description>
  <maintainer email="ssm@todo.todo">ssm</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

